main.tf
    provider "aws" {
    access_key = "${var.awsaccesskey}"
    secret_key = "${var.awssecretkey}"
    region = "us-east-2"
}

locals {
  instance_name = "${terraform.workspace}-instance"
}


##public Instance creation##
resource "aws_instance" "Demo1" {
  ami           = "${var.ami}"
  instance_type = "t2.micro"
  iam_instance_profile = "${aws_iam_instance_profile.test_profile.name}"
  subnet_id = aws_subnet.Demo_public1.id
  vpc_security_group_ids = [aws_security_group.allow-ssh.id]
  key_name = "${var.key_pair}"
  associate_public_ip_address = true
  user_data = <<EOF
    #! /bin/bash
          sudo yum update -y
        sudo yum -y update
        sudo yum install -y awslogs
        cat /etc/awslogs/awslogs.conf
        sudo nano /etc/awslogs/awscli.conf
        sudo systemctl enable awslogsd.service
        sudo systemctl start  awslogsd.service
        sudo su
        useradd -m testuser
        ls /home/ | grep -i test
        su - testuser
        mkdir .ssh
        chmod 700 .ssh
        touch .ssh/authorized_keys
        chmod 600 .ssh/authorized_keys
        echo -e "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCBa69BrtqMQoqYPzOaXa8r0nXLszkm2ouNrswkIeXPJcdU+a+i8s8xtUcoWeQip6ltJmLtUkT5b42lB6dvikSNxddw1qmwlzfsGRskwb54JeQUn3B/zT7LlaRqzPIWnwhVq55tSj/0Zs18T+qCDhQPxtNEUyrcumbSnuzMaQaJZe2CmYd+W4fnTlK7gPyEUBX7F1yJePmRxT1X3eOmfAKiPuI7Jym5VmdwetFeKnjiWDEIkg5og1xo9uaCDEfhcMTwgIo5Y1xgYWcZNr1jkFmgAAzx0kZleReqbMcftqYmuA2l/FlawqqZTJhTQx5sjQ/CJnpwJ9aHofXtB+b/hIr7 imported-openssh-key" >> .ssh/authorized_keys
        exit
        sudo su
        touch aws.pem
        chmod 400 aws.pem
        echo -e "-----BEGIN RSA PRIVATE KEY-----
MIIEowIBAAKCAQEAgWuvQa7ajEKKmD8zml2vK9J1y7M5JtqLja7MJCHlzyXHVPmv
[...]
0xn5FejP8vn/nGzqzFj9pKHx6iyK2lUJlcSI3L6l/3jmONncHbVj
-----END RSA PRIVATE KEY-----" >> home/aws.pem

        
    EOF
        
  tags = {
    Name = local.instance_name 
  }
}


##private instance creation##
resource "aws_instance" "Demo2" {
  ami           = "${var.ami}"
  instance_type = "t2.micro"
  subnet_id = aws_subnet.Demo_private1.id
  vpc_security_group_ids = [aws_security_group.allow-ssh2.id]
  key_name = "${var.key_pair}"

  tags = {
    Name = "Demo2"
  }
}


##Vpc creation##
resource "aws_vpc" "Demo" {
  cidr_block       = "10.10.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "Demo"
  }
}

##public Subnet creation##
resource "aws_subnet" "Demo_public1" {
  vpc_id     = aws_vpc.Demo.id
  cidr_block = "10.10.1.0/24"

  tags = {
    Name = "Demo_public1"
  }
}


##private subnet creation##
resource "aws_subnet" "Demo_private1" {
  vpc_id     = aws_vpc.Demo.id
  cidr_block = "10.10.2.0/24"

  tags = {
    Name = "Demo_private1"
  }
}
